# dag-crr-research

./: .gitignore  BENCHMARKS.md  CITATION.cff  Cargo.toml  README.md  REPRODUCE.md
benches/: alternatives.rs  fair_comparison.rs  gc_demo.rs  paper_benchmarks.rs  paper_extended.rs
benches/common/: mod.rs
results/: criterion.json  network.json
scripts/: collect_results.py  extract_results.py  gcp_network_bench.sh  generate_figures.py  setup_crsqlite.sh
src/: lib.rs  main.rs
src/ui/: demo.rs  mod.rs  theme.rs
sync-engine/: Cargo.toml
sync-engine/src/: error.rs  gc.rs  lib.rs  merge.rs  network.rs  row.rs  sqlite_backend.rs  sync.rs  table.rs
sync-engine/src/storage/: memory.rs  mod.rs  sqlite.rs
