[package]
name = "sync-engine"
version = "0.1.0"
edition = "2021"
description = "DAG+CRR synchronization engine for distributed databases"
license = "MIT"
repository = "https://github.com/rocky43007/dag-crr-research"
keywords = ["crdt", "synchronization", "distributed-systems", "database"]
categories = ["database", "data-structures"]

[lib]
name = "sync_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]
